<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joelimyx.flipvicefeed.setting.NotificationFragment">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/notifiction_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:checked="true"/>
    <TextView
        android:id="@+id/notification_switch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notification"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:timePickerMode="spinner"
        android:layout_below="@id/notification_switch_text"/>

    <LinearLayout
        android:id="@+id/day_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@id/time_picker">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mon"/>
            <CheckBox
                android:id="@+id/mon_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tue"/>
            <CheckBox
                android:id="@+id/tue_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wed"/>
            <CheckBox
                android:id="@+id/wed_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thu"/>
            <CheckBox
                android:id="@+id/thu_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fri"/>
            <CheckBox
                android:id="@+id/fri_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sat"/>
            <CheckBox
                android:id="@+id/sat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sun"/>
            <CheckBox
                android:id="@+id/sun_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="Save"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/day_list"/>


</RelativeLayout>
