<resources>
    <string name="app_name">Vooz</string>
    <string name="open_nav_bar">Open Nav Drawer</string>
    <string name="close_nav_bar">Close Nav Drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="saved_switch_state">saved switch</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="topic_filter">Topic Filter</string>
    <string name="title_activity_detail">Detail View</string>

    <string name="facebook_app_id">your facebook_app_id</string>
    <string name="preference_current_filter">current filter</string>
    <string name="current_filter">current filter</string>

    <string name="skip_this_step"><u>Skip this step</u></string>
    <string name="main_to_detail">main2detail</string>
    <string name="app_bar_transition">app_bar_transition</string>

    <string name="setting_fragment">setting fragment</string>
    <string name="detail_fragment">detail fragment</string>
    <string name="place_holder_fragment">Place holder</string>
    <string name="favorite_size">favorite size</string>
</resources>
