<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:background="#000000">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:fontFamily="sans-serif-condensed"
        android:text="Welcome to"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/voozlogonobg"
        android:contentDescription="Vooz Logo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal">

    <Button
        android:id="@+id/begin_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:background="#000000"
        android:text="Let's begin"

        android:textColor="#ffffff"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="secondPageJumper"
        />

    </LinearLayout>

</LinearLayout>